[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://NewAssets/Player/Idle3.png" type="Texture" id=2]
[ext_resource path="res://NewAssets/Player/Idle0.png" type="Texture" id=3]
[ext_resource path="res://NewAssets/Player/Idle6.png" type="Texture" id=4]
[ext_resource path="res://NewAssets/Player/Idle4.png" type="Texture" id=5]
[ext_resource path="res://NewAssets/Player/Idle5.png" type="Texture" id=6]
[ext_resource path="res://NewAssets/Player/Idle8.png" type="Texture" id=7]
[ext_resource path="res://NewAssets/Player/Idle2.png" type="Texture" id=8]
[ext_resource path="res://NewAssets/Player/Idle1.png" type="Texture" id=9]
[ext_resource path="res://NewAssets/Player/Idle7.png" type="Texture" id=10]
[ext_resource path="res://NewAssets/Player/Idle9.png" type="Texture" id=11]
[ext_resource path="res://NewAssets/Player/Idle10.png" type="Texture" id=12]
[ext_resource path="res://NewAssets/Player/Run5.png" type="Texture" id=13]
[ext_resource path="res://NewAssets/Player/Run9.png" type="Texture" id=14]
[ext_resource path="res://NewAssets/Player/Run1.png" type="Texture" id=15]
[ext_resource path="res://NewAssets/Player/Jump.png" type="Texture" id=16]
[ext_resource path="res://NewAssets/Player/Run3.png" type="Texture" id=17]
[ext_resource path="res://NewAssets/Player/Run10.png" type="Texture" id=18]
[ext_resource path="res://NewAssets/Player/Run8.png" type="Texture" id=19]
[ext_resource path="res://NewAssets/Player/Run4.png" type="Texture" id=20]
[ext_resource path="res://NewAssets/Player/Run7.png" type="Texture" id=21]
[ext_resource path="res://NewAssets/Player/Run2.png" type="Texture" id=22]
[ext_resource path="res://NewAssets/Player/Run0.png" type="Texture" id=23]
[ext_resource path="res://NewAssets/Player/Run6.png" type="Texture" id=24]
[ext_resource path="res://NewAssets/Player/Run11.png" type="Texture" id=25]
[ext_resource path="res://Sounds/jump1.ogg" type="AudioStream" id=26]
[ext_resource path="res://Prefabs/MobileControls.tscn" type="PackedScene" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 9.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 25 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.45037
height = 9.43016

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 2.83898 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_mask = 94
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "jump"

[node name="shape_principal" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.943871, 2.83162 )
shape = SubResource( 2 )

[node name="headCollider" type="Area2D" parent="."]
collision_mask = 16

[node name="collision" type="CollisionShape2D" parent="headCollider"]
visible = false
position = Vector2( -0.943871, -10.3826 )
shape = SubResource( 3 )

[node name="jumpFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
volume_db = -25.0

[node name="pushRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 9.43872, 2.83162 )
cast_to = Vector2( 2, 0 )
collision_mask = 128

[node name="pushLeft" type="RayCast2D" parent="."]
position = Vector2( -9.29961, 2.83162 )
cast_to = Vector2( -2, 0 )
collision_mask = 128

[node name="Controls" parent="." instance=ExtResource( 27 )]

[connection signal="body_entered" from="headCollider" to="." method="_on_headCollider_body_entered"]
